add jvm args for testing